force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/TrackIT__Maint_and_Insp_Transactions__c.object-meta.xml
<CustomObject>
    <description>Stores maintenance and inspection transaction information for equipment in Facility Manager</description>
    <label>Equipment Maint And Inspect Transaction</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Maint And Inspect Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>