force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/fields/TrackIT__Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Date__c</fullName>
    <description>Date on which maintenance or inspection was completed
Not Used, Replaced with Date Time Field</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>