force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/fields/TrackIT__InspectionTasks__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__InspectionTasks__c</fullName>
    <label>Inspection Tasks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Inspection_Tasks</valueSetName>
    </valueSet>
</CustomField>