force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/fields/TrackIT__Item__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item__c</fullName>
    <description>Maintenance and Inspection Transactions Detail Part of the Relationship</description>
    <label>Item</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipName>Maint_and_Insp_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>