force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/fields/TrackIT__Maint_and_Inspect_TasksNOTUSED__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maint_and_Inspect_TasksNOTUSED__c</fullName>
    <description>NO LONGER USED - REPLACED BY  &quot;Maintain / Inspect Tasks&quot;</description>
    <label>Maint / Inspect Tasks NOT USED</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alarms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>