force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/fields/TrackIT__Maintenance_Tasks__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maintenance_Tasks__c</fullName>
    <label>Maintenance Tasks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Maintenance_Tasks</valueSetName>
    </valueSet>
</CustomField>