force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/fields/TrackIT__Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Meter_Reading__c</fullName>
    <label>Meter Reading</label>
    <length>40</length>
    <type>Text</type>
</CustomField>