force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/fields/TrackIT__Performed_By__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Performed_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Performed By</label>
    <referenceTo>TrackIT__Assignee__c</referenceTo>
    <relationshipName>Maintenance_and_Inspection_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>