force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/validationRules/TrackIT__MaintTrans_ID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__MaintTrans_ID_Change_After_Creation_Rule</fullName>
    <active>true</active>
    <description>Prevents users from changing record ID after the maint and trans record is created.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Maintenance and Transaction Record ID cannot be changed after initial creation.</errorMessage>
</ValidationRule>