force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/listViews/TrackIT__All_Inspection.listView-meta.xml
<ListView>
    <fullName>TrackIT__All_Inspection</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Item__c</columns>
    <columns>TrackIT__Date_Time__c</columns>
    <columns>TrackIT__Inspection_Type__c</columns>
    <columns>TrackIT__Inspection_Result__c</columns>
    <columns>TrackIT__InspectionTasks__c</columns>
    <columns>TrackIT__Meter_Reading__c</columns>
    <columns>TrackIT__Notes__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrackIT__Type__c</field>
        <operation>equals</operation>
        <value>Inspection</value>
    </filters>
    <label>All Inspection</label>
    <language>en_US</language>
</ListView>