force-app/main/default/objects/TrackIT__Maint_and_Insp_Transactions__c/listViews/TrackIT__All_Repair.listView-meta.xml
<ListView>
    <fullName>TrackIT__All_Repair</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Item__c</columns>
    <columns>TrackIT__Date_Time__c</columns>
    <columns>TrackIT__Maintenance_Tasks__c</columns>
    <columns>TrackIT__Meter_Reading__c</columns>
    <columns>TrackIT__Notes__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrackIT__Type__c</field>
        <operation>equals</operation>
        <value>Repair</value>
    </filters>
    <label>All Repair</label>
    <language>en_US</language>
</ListView>